# codegen/openapi/v4.json
@@ -65,28 +65,9 @@
                     },
                     "result": {
                       "type": "object",
-                      "description": "Short team representation. For invites, push notifications, etc. Readonly.",
                       "properties": {
                         "icons": {
-                          "type": "object",
-                          "description": "Team icons",
-                          "properties": {
-                            "color": {
-                              "type": "string",
-                              "description": "Stub icon background color",
-                              "example": "#E36659"
-                            },
-                            "letters": {
-                              "type": "string",
-                              "description": "Letters from stub icon",
-                              "example": "TT"
-                            },
-                            "stub": {
-                              "type": "string",
-                              "description": "Generated image with 1-2 letters",
-                              "example": "https://web.tada.team/a/e36659:tt/256.png"
-                            }
-                          }
+                          "$ref": "#/components/schemas/TeamShort"
                         },
                         "name": {
                           "type": "string",
@@ -98,7 +79,8 @@
                           "description": "Team id",
                           "example": "123e4567-e89b-12d3-a456-426614174000"
                         }
-                      }
+                      },
+                      "description": "Short team representation. For invites, push notifications, etc. Readonly."
                     }
                   }
                 }
@@ -164,5 +146,80 @@
       }
     }
   },
-  "components": {}
+  "components": {
+    "schemas": {
+      "IconData": {
+        "type": "object",
+        "properties": {
+          "color": {
+            "type": "string",
+            "description": "Stub icon background color"
+          },
+          "letters": {
+            "type": "string",
+            "description": "Letters from stub icon"
+          },
+          "lg": {
+            "description": "Large image",
+            "$ref": "#/components/schemas/SingleIcon"
+          },
+          "sm": {
+            "description": "Small icon",
+            "$ref": "#/components/schemas/SingleIcon"
+          },
+          "stub": {
+            "type": "string",
+            "description": "Generated image with 1-2 letters"
+          }
+        },
+        "description": "Icon data. Contains sm+lg (for uploaded image) OR stub+letters+color (for icon generated from display name)"
+      },
+      "SingleIcon": {
+        "type": "object",
+        "properties": {
+          "height": {
+            "type": "number",
+            "description": "Icon height, in pixels"
+          },
+          "url": {
+            "type": "string",
+            "description": "absolute url to icon"
+          },
+          "width": {
+            "type": "number",
+            "description": "Icon width, in pixels"
+          }
+        },
+        "required": [
+          "height",
+          "url",
+          "width"
+        ],
+        "description": "Small or large icon"
+      },
+      "TeamShort": {
+        "type": "object",
+        "properties": {
+          "icons": {
+            "description": "Team icons",
+            "$ref": "#/components/schemas/IconData"
+          },
+          "name": {
+            "type": "string",
+            "description": "Team name"
+          },
+          "uid": {
+            "type": "string",
+            "description": "Team id"
+          }
+        },
+        "required": [
+          "icons",
+          "name",
+          "uid"
+        ],
+        "description": "Short team representation. For invites, push notifications, etc. Readonly"
+      }
+    }
+  }
 }
